--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@globules-io/cordova-plugin-ios-xhr",
+  "name": "francescoextraweb/cordova-plugin-ios-xhr",
   "version": "1.2.4",
   "description": "Cordova iOS 6+ File XHR Plugin",
   "cordova": {
-    "id": "@globules-io/cordova-plugin-ios-xhr",
+    "id": "francescoextraweb/cordova-plugin-ios-xhr",
     "platforms": [
       "ios"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/globules-io/cordova-plugin-ios-xhr"
+    "url": "https://github.com/francescoextraweb/cordova-plugin-ios-xhr"
   },
   "keywords": [
     "cordova",
@@ -22,7 +22,7 @@
     "test": "npm run jshint",
     "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests"
   },
-  "author": "globules.io",
+  "author": "francescoextraweb",
   "license": "MIT",
   "devDependencies": {
     "jshint": "^2.6.0"
