--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/francescoextraweb/cordova-plugin-ios-xhr"
+    "url": "git+https://github.com/francescoextraweb/cordova-plugin-ios-xhr.git"
   },
   "keywords": [
     "cordova",
