--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "francescoextraweb/cordova-plugin-ios-xhr",
-  "version": "1.2.4",
+  "name": "cordova-plugin-ios-xhr",
+  "version": "1.2.5",
   "description": "Cordova iOS 6+ File XHR Plugin",
   "cordova": {
-    "id": "francescoextraweb/cordova-plugin-ios-xhr",
+    "id": "cordova-plugin-ios-xhr",
     "platforms": [
       "ios"
     ]
