--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
  -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="francescoextraweb/cordova-plugin-ios-xhr" version="1.2.4">
+    id="cordova-plugin-ios-xhr" version="1.2.5">
     <name>Cordova WKWebView File XHR Plugin</name>
     <description>This plugin resolves XHR Cross-Origin Resource Sharing (CORS) constraints.</description>
     <license>MIT</license> 
